<resources>
    <string name="app_name">Common Library</string>
    <string name="facebook_app_id">2420445654853612</string>
    <string name="fb_login_protocol_scheme">fb2420445654853612</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="room_not_found">Room not found!</string>
    <string name="room_new">Add New Room</string>
    <string name="room_edit">Edit Room</string>
    <string name="beacon_namespace">Namespace</string>
    <string name="beacon_instance_id">Instance ID</string>
    <string name="beacon_mac">MAC</string>
    <string name="beacon_position_x">X</string>
    <string name="beacon_position_y">Y</string>
    <string name="beacon_position">Position</string>
    <string name="beacon_default_position_value">-1</string>
    <string name="delete">Delete</string>
    <string name="room_name">Name</string>
    <string name="room_server_url">Server URL</string>
    <string name="room_width">Width</string>
    <string name="room_height">Height</string>
    <string name="beacon_name">Name</string>
    <string name="beacon_color">Color</string>
    <string name="movie_preferences">Movie Preferences</string>
    <string name="music_preferences">Music Preferences</string>
    <string name="book_preferences">Book Preferences</string>
    <string name="movie_pref_desc">User most preferred movie genres.</string>
    <string name="music_pref_desc">User most preferred music genres.</string>
    <string name="book_pref_desc">User most preferred book genres.</string>
    <string-array name="movie_genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Historical</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Paranormal</item>
        <item>Philosophical</item>
        <item>Political</item>
        <item>Romance</item>
        <item>Satire</item>
        <item>Science fiction</item>
        <item>Social</item>
        <item>Thriller</item>
        <item>Western</item>
    </string-array>
    <string-array name="music_genres">
        <item>Blues</item>
        <item>Caribbean</item>
        <item>Comedy</item>
        <item>Country</item>
        <item>Easy listening</item>
        <item>Electronic</item>
        <item>Folk</item>
        <item>Hip hop</item>
        <item>Jazz</item>
        <item>Latin</item>
        <item>Pop</item>
        <item>R&amp;B</item>
        <item>Soul</item>
        <item>Rock</item>
    </string-array>
    <string-array name="book_genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Art</item>
        <item>Alternate history</item>
        <item>Autobiography</item>
        <item>Anthology</item>
        <item>Biography</item>
        <item>Book review</item>
        <item>Children</item>
        <item>Cookbook</item>
        <item>Comic</item>
        <item>Diary</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Fiction</item>
        <item>Guide</item>
        <item>Fairytale</item>
        <item>Health</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Graphic novel</item>
        <item>Journal</item>
        <item>Historical</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Paranormal</item>
        <item>Religion</item>
        <item>Picture book</item>
        <item>Textbook</item>
        <item>Poetry</item>
        <item>Review</item>
        <item>Political</item>
        <item>Thriller</item>
        <item>Science</item>
        <item>Romance</item>
        <item>Self help</item>
        <item>Science fiction</item>
    </string-array>
</resources>
